--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLl91SciWCdmIBiO01xY/Y",
+      "authorship_tag": "ABX9TyMnBkSMJ4b9TkHp2xzBRn3j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -973,7 +973,7 @@
         "id": "NqIhq2QwwLhT",
         "outputId": "c8997ee7-56b3-406a-8b0f-7f3eadca28f8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1495,6 +1495,286 @@
           "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def hcf(a,b,c,d):\n",
+        " if a>b:\n",
+        "  small=b\n",
+        " elif b>c:\n",
+        "  small=c\n",
+        " elif c>d:\n",
+        "  small=d\n",
+        " else:\n",
+        "  small=a\n",
+        "  for i in range(1,small+1):\n",
+        "   if a%i==0 and b%i==0  and c%i==0 and d%i==0:\n",
+        "    hcf=i\n",
+        " print(hcf)\n",
+        "hcf(5,10,15,20)\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "3EddPIFIs1HT",
+        "outputId": "b67a27ff-ce85-4f9b-fff5-2db3d9c7ab3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def lcm(a,b,c,d):\n",
+        " if a>b:\n",
+        "  big=a\n",
+        " elif b>c:\n",
+        "  big=b\n",
+        " elif c>d:\n",
+        "  big=c\n",
+        " else:\n",
+        "  big=d\n",
+        "  for i in range(big,a*b*c*d+1):\n",
+        "   if i%a==0 and i%b==0  and i%c==0 and i%d==0:\n",
+        "     lcm=i\n",
+        "     break\n",
+        "  print(lcm)\n",
+        "\n",
+        "lcm(5,10,15,20)"
+      ],
+      "metadata": {
+        "id": "kpaH_I0Ewg7s",
+        "outputId": "c8f2309d-613e-4fd1-af3e-68cf388368b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "60\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#file handling(create, change and to remove something)\n",
+        "with open(\"file.txt\",\"w\") as file:#(this is standard method)\n",
+        "#file=open(\"file.txt\",\"w\")as file:(this is the old method and we need to close the file in this)\n",
+        "  file.write(\"python\")\n",
+        "  file.write(\"\\nlanguage\")\n",
+        "  file.write(\"\\nprogramming\")\n",
+        "  file.write(\"\\nlearning\")"
+      ],
+      "metadata": {
+        "id": "TjsOPSzVykYm"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"file.txt\",\"a\") as file:\n",
+        " file.write(\"python\")\n",
+        " file.write(\"\\nlanguage\")\n",
+        " file.write(\"\\nprogramming\")\n",
+        " file.write(\"\\nlearning\")"
+      ],
+      "metadata": {
+        "id": "mxDPdiKi7mhs"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"file.txt\",\"r\") as file:\n",
+        "  data=file.read()\n",
+        "  print(data)"
+      ],
+      "metadata": {
+        "id": "U_R3PScm1Enn",
+        "outputId": "f348ba05-1a2f-45e6-d99b-27d09f6c9d9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "python\n",
+            "language\n",
+            "programming\n",
+            "learning\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"file.txt\",\"r\") as file:\n",
+        "  data=file.readline()\n",
+        "  print(data)"
+      ],
+      "metadata": {
+        "id": "wRRRTaCT2_0l",
+        "outputId": "00c39e22-6dea-4c09-9e76-b243eaf1342e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "python\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"file.txt\",\"r\") as file:\n",
+        "  data=file.readlines()\n",
+        "  for i in data:\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "id": "9gmtpRK23G_J",
+        "outputId": "c707d749-0aaf-4c67-8854-dc6020340655",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "python\n",
+            "\n",
+            "language\n",
+            "\n",
+            "programming\n",
+            "\n",
+            "learning\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open (\"file1.txt\",\"w\") as file:\n",
+        "  file.write(\"vaishnavi\")\n"
+      ],
+      "metadata": {
+        "id": "OFlHAD8j5Qlu"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"file2.txt\",\"w\") as file:\n",
+        "  file.write(\"sharma\")\n"
+      ],
+      "metadata": {
+        "id": "PkHNs6cI52q9"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open (\"file1.txt\",\"r\") as file:\n",
+        "   first_name=file.read()\n",
+        "   print(first_name)"
+      ],
+      "metadata": {
+        "id": "uNmwy2mF98MM",
+        "outputId": "4a7841d4-7c53-491e-e493-3e0108e15b30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vaishnavi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open (\"file2.txt\",\"r\") as file:\n",
+        "   last_name=file.read()\n",
+        "   print(last_name)"
+      ],
+      "metadata": {
+        "id": "g6frRa3m-Da-",
+        "outputId": "ba95a10a-dc31-49c2-c026-e1426a5f62a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sharma\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open (\"file3.txt\",\"w\") as file:\n",
+        "  file.write(first_name+\" \"+last_name)"
+      ],
+      "metadata": {
+        "id": "FBhcKiBd-srS"
+      },
+      "execution_count": 69,
+      "outputs": []
     }
   ]
 }
