--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnBkSMJ4b9TkHp2xzBRn3j",
+      "authorship_tag": "ABX9TyNG/HKGKgTtCA4lR0ngeNzW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1513,8 +1513,7 @@
         "    hcf=i\n",
         " print(hcf)\n",
         "hcf(5,10,15,20)\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "3EddPIFIs1HT",
@@ -1523,7 +1522,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1561,7 +1560,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1576,7 +1575,7 @@
       "cell_type": "code",
       "source": [
         "#file handling(create, change and to remove something)\n",
-        "with open(\"file.txt\",\"w\") as file:#(this is standard method)\n",
+        "with open(\"file.txt\",\"w\") as file: #(this is standard method)\n",
         "#file=open(\"file.txt\",\"w\")as file:(this is the old method and we need to close the file in this)\n",
         "  file.write(\"python\")\n",
         "  file.write(\"\\nlanguage\")\n",
@@ -1586,7 +1585,7 @@
       "metadata": {
         "id": "TjsOPSzVykYm"
       },
-      "execution_count": 48,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1601,7 +1600,7 @@
       "metadata": {
         "id": "mxDPdiKi7mhs"
       },
-      "execution_count": 50,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1613,18 +1612,21 @@
       ],
       "metadata": {
         "id": "U_R3PScm1Enn",
-        "outputId": "f348ba05-1a2f-45e6-d99b-27d09f6c9d9c",
+        "outputId": "dba4e276-ff7d-4208-fb21-d554ff709254",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "python\n",
+            "language\n",
+            "programming\n",
+            "learningpython\n",
             "language\n",
             "programming\n",
             "learning\n"
@@ -1641,12 +1643,12 @@
       ],
       "metadata": {
         "id": "wRRRTaCT2_0l",
-        "outputId": "00c39e22-6dea-4c09-9e76-b243eaf1342e",
+        "outputId": "98fbfad4-ed09-48f3-dd44-a4522e8cbe48",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1661,6 +1663,31 @@
     {
       "cell_type": "code",
       "source": [
+        "with open (\"file.txt\",\"r\") as file:\n",
+        "  data=file.readlines()\n",
+        "  print(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9E0lc0xZ5JO-",
+        "outputId": "9cdb6576-0f44-4596-90bc-12dd999195ad"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['python\\n', 'language\\n', 'programming\\n', 'learningpython\\n', 'language\\n', 'programming\\n', 'learning']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "with open(\"file.txt\",\"r\") as file:\n",
         "  data=file.readlines()\n",
         "  for i in data:\n",
@@ -1668,18 +1695,24 @@
       ],
       "metadata": {
         "id": "9gmtpRK23G_J",
-        "outputId": "c707d749-0aaf-4c67-8854-dc6020340655",
+        "outputId": "7096366c-6cc7-495f-a081-adf3e0f03617",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "python\n",
+            "\n",
+            "language\n",
+            "\n",
+            "programming\n",
+            "\n",
+            "learningpython\n",
             "\n",
             "language\n",
             "\n",
@@ -1693,42 +1726,78 @@
     {
       "cell_type": "code",
       "source": [
+        "#exception handling with file\n",
+        "try:\n",
+        "  with open (\"fil.txt\",\"r\") as file:\n",
+        "    file.read()\n",
+        "except FileNotFoundError:\n",
+        "  print(\"file not found\")\n",
+        "else:\n",
+        "  print(\"program runs successfully\")\n",
+        "finally:\n",
+        "  print(\"thank you\")\n"
+      ],
+      "metadata": {
+        "id": "kZEGk0jQBkwj",
+        "outputId": "4dd202d3-3413-49d9-a325-9778c8f6bae1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "file not found\n",
+            "thank you\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creation of file1 with write function\n",
         "with open (\"file1.txt\",\"w\") as file:\n",
         "  file.write(\"vaishnavi\")\n"
       ],
       "metadata": {
         "id": "OFlHAD8j5Qlu"
       },
-      "execution_count": 64,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# creation of file2 with write function\n",
         "with open(\"file2.txt\",\"w\") as file:\n",
         "  file.write(\"sharma\")\n"
       ],
       "metadata": {
         "id": "PkHNs6cI52q9"
       },
-      "execution_count": 66,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# file1 with read function\n",
         "with open (\"file1.txt\",\"r\") as file:\n",
         "   first_name=file.read()\n",
         "   print(first_name)"
       ],
       "metadata": {
         "id": "uNmwy2mF98MM",
-        "outputId": "4a7841d4-7c53-491e-e493-3e0108e15b30",
+        "outputId": "803de292-8489-4bbb-895e-01a155db4464",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1742,18 +1811,19 @@
     {
       "cell_type": "code",
       "source": [
+        "#file2 with read function\n",
         "with open (\"file2.txt\",\"r\") as file:\n",
         "   last_name=file.read()\n",
         "   print(last_name)"
       ],
       "metadata": {
         "id": "g6frRa3m-Da-",
-        "outputId": "ba95a10a-dc31-49c2-c026-e1426a5f62a2",
+        "outputId": "a04d3a8f-eaea-4b87-fb03-23f1db41cb85",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 68,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1767,14 +1837,40 @@
     {
       "cell_type": "code",
       "source": [
+        "#adding file1 and file2 with write function\n",
         "with open (\"file3.txt\",\"w\") as file:\n",
         "  file.write(first_name+\" \"+last_name)"
       ],
       "metadata": {
         "id": "FBhcKiBd-srS"
       },
-      "execution_count": 69,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open (\"file3.txt\",\"r\") as file:\n",
+        "  name=file.read()\n",
+        "  print(name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PWbnSS_4-NAc",
+        "outputId": "4490474a-50c2-4014-de51-206be45e5796"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vaishnavi sharma\n"
+          ]
+        }
+      ]
     }
   ]
 }
