--- a/vaishnavi.ipynb
+++ b/vaishnavi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDng8Zww8wTclfkI0W01qb",
+      "authorship_tag": "ABX9TyOpnFOTgWsrU0DSBUhJqYWB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -612,7 +612,7 @@
         "id": "0V-86DoxXxl1",
         "outputId": "75c141e1-799c-402d-a2ba-869b2e2f1af1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,7 +626,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from re import S\n",
+        "\n",
         "# 2!+4!+6!=?\n",
         "def num(n):\n",
         "  sum=0\n",
@@ -639,8 +639,7 @@
         "num(6)\n",
         "\n",
         "\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "GJxS-p-XcZwt",
@@ -649,7 +648,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,6 +658,128 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=100\n",
+        "for num in range(1,101):\n",
+        "  if num<=1:\n",
+        "    continue\n",
+        "  else:\n",
+        "     for i in range(2,num):\n",
+        "       if num%i==0:\n",
+        "        break\n",
+        "     else:\n",
+        "        print(num)"
+      ],
+      "metadata": {
+        "id": "aNazBN8iUDjQ",
+        "outputId": "8f1db045-1f0e-4770-d359-04dd47c7a8f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "11\n",
+            "13\n",
+            "17\n",
+            "19\n",
+            "23\n",
+            "29\n",
+            "31\n",
+            "37\n",
+            "41\n",
+            "43\n",
+            "47\n",
+            "53\n",
+            "59\n",
+            "61\n",
+            "67\n",
+            "71\n",
+            "73\n",
+            "79\n",
+            "83\n",
+            "89\n",
+            "97\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=1\n",
+        "for num in range(2,101):\n",
+        "  for i in range(2,num):\n",
+        "    if num%i==0:\n",
+        "      break\n",
+        "  else:\n",
+        "     print(num)"
+      ],
+      "metadata": {
+        "id": "FJlk0So7VBGS",
+        "outputId": "ccce0d8a-3b56-4954-f42c-b6f1b5606826",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "11\n",
+            "13\n",
+            "17\n",
+            "19\n",
+            "23\n",
+            "29\n",
+            "31\n",
+            "37\n",
+            "41\n",
+            "43\n",
+            "47\n",
+            "53\n",
+            "59\n",
+            "61\n",
+            "67\n",
+            "71\n",
+            "73\n",
+            "79\n",
+            "83\n",
+            "89\n",
+            "97\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reverse in function\n",
+        "and prime number with square method\n",
+        ""
+      ],
+      "metadata": {
+        "id": "50PyvEPuVmUN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
