--- a/vaishnavi.ipynb
+++ b/vaishnavi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpnFOTgWsrU0DSBUhJqYWB",
+      "authorship_tag": "ABX9TyPIRaDtcnp9C2I0GlMVb2I3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -662,6 +662,43 @@
     {
       "cell_type": "code",
       "source": [
+        "def num(n):\n",
+        "  sum=0\n",
+        "  fact=1\n",
+        "  for i in range(1,n+1):\n",
+        "    fact=fact*i\n",
+        "    if i%2==0:\n",
+        "\n",
+        "     sum=fact+sum\n",
+        "  return sum\n",
+        "num(6)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aNEM6jC_7nkk",
+        "outputId": "beeec2cb-31e0-44bd-cefe-2173bdaf0fb4"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "746"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "n=100\n",
         "for num in range(1,101):\n",
         "  if num<=1:\n",
@@ -680,7 +717,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,7 +756,7 @@
       "cell_type": "code",
       "source": [
         "n=1\n",
-        "for num in range(2,101):\n",
+        "for num in range(2,20):\n",
         "  for i in range(2,num):\n",
         "    if num%i==0:\n",
         "      break\n",
@@ -728,12 +765,12 @@
       ],
       "metadata": {
         "id": "FJlk0So7VBGS",
-        "outputId": "ccce0d8a-3b56-4954-f42c-b6f1b5606826",
+        "outputId": "ec35b403-3cb5-4470-f314-927813241d89",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -746,24 +783,7 @@
             "11\n",
             "13\n",
             "17\n",
-            "19\n",
-            "23\n",
-            "29\n",
-            "31\n",
-            "37\n",
-            "41\n",
-            "43\n",
-            "47\n",
-            "53\n",
-            "59\n",
-            "61\n",
-            "67\n",
-            "71\n",
-            "73\n",
-            "79\n",
-            "83\n",
-            "89\n",
-            "97\n"
+            "19\n"
           ]
         }
       ]
@@ -771,15 +791,38 @@
     {
       "cell_type": "code",
       "source": [
-        "reverse in function\n",
-        "and prime number with square method\n",
+        "def reverse(n):\n",
+        "  rev=0\n",
+        "  while n>0:\n",
+        "\n",
+        "\n",
+        "    digit=n%10\n",
+        "    n=n//10\n",
+        "    rev=rev*10+digit\n",
+        "  return rev\n",
+        "reverse(23456)\n",
         ""
       ],
       "metadata": {
-        "id": "50PyvEPuVmUN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hoixO7Sy4Gek",
+        "outputId": "af45a7f3-84d3-4253-b284-5ca1779dae14"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "65432"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     }
   ]
 }
