--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNG/HKGKgTtCA4lR0ngeNzW",
+      "authorship_tag": "ABX9TyNeDw+CnPj8wUpHf17Q7AGT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1314,6 +1314,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#args function for positional argument\n",
         "def add_value(*args):\n",
         "  return sum(args)\n",
         "print(add_value(20,30))\n",
@@ -1374,7 +1375,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#kwargs funtion positional argument\n",
+        "#kwargs funtion for keys and values\n",
         "def add_num(**kwargs):\n",
         "  sum=0\n",
         "  for key,value in kwargs.items():\n",
@@ -1585,7 +1586,7 @@
       "metadata": {
         "id": "TjsOPSzVykYm"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1600,7 +1601,7 @@
       "metadata": {
         "id": "mxDPdiKi7mhs"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1617,7 +1618,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1648,7 +1649,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1674,7 +1675,7 @@
         "id": "9E0lc0xZ5JO-",
         "outputId": "9cdb6576-0f44-4596-90bc-12dd999195ad"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1700,7 +1701,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1744,7 +1745,7 @@
         "id": "kZEGk0jQBkwj",
         "outputId": "4dd202d3-3413-49d9-a325-9778c8f6bae1"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1766,7 +1767,7 @@
       "metadata": {
         "id": "OFlHAD8j5Qlu"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1779,7 +1780,7 @@
       "metadata": {
         "id": "PkHNs6cI52q9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1797,7 +1798,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1823,7 +1824,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1844,7 +1845,7 @@
       "metadata": {
         "id": "FBhcKiBd-srS"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1861,7 +1862,7 @@
         "id": "PWbnSS_4-NAc",
         "outputId": "4490474a-50c2-4014-de51-206be45e5796"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
