--- a/vaishnavi.ipynb
+++ b/vaishnavi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIRaDtcnp9C2I0GlMVb2I3",
+      "authorship_tag": "ABX9TyOViPRKHr1TzOH988iaV2s9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -682,7 +682,7 @@
         "id": "aNEM6jC_7nkk",
         "outputId": "beeec2cb-31e0-44bd-cefe-2173bdaf0fb4"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -770,7 +770,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,8 +800,7 @@
         "    n=n//10\n",
         "    rev=rev*10+digit\n",
         "  return rev\n",
-        "reverse(23456)\n",
-        ""
+        "reverse(23456)\n"
       ],
       "metadata": {
         "colab": {
@@ -810,7 +809,7 @@
         "id": "hoixO7Sy4Gek",
         "outputId": "af45a7f3-84d3-4253-b284-5ca1779dae14"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -821,6 +820,144 @@
           },
           "metadata": {},
           "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=10\n",
+        "sum=0\n",
+        "for i in range(1,11):\n",
+        "  sum=sum+i*i\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XFtW96QLTZQm",
+        "outputId": "545a9a1b-a78c-40c9-abf6-f6d828845ffc"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "385\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=10\n",
+        "sum=0\n",
+        "for i in range(1,11):\n",
+        "  sum=sum+i**5\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "bRdjP4L-VfTT",
+        "outputId": "6c155218-2c57-42aa-f596-ba33ee078fb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "220825\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum1=0\n",
+        "sum2=0\n",
+        "for i in range(1,10,2):\n",
+        "  sum1=sum1+i*i\n",
+        "print(sum1)\n",
+        "for j in range(2,11,2):\n",
+        "  sum2=sum2+j*j*j\n",
+        "print(sum2)\n",
+        "sum3=sum1+sum2\n",
+        "print(sum3)"
+      ],
+      "metadata": {
+        "id": "oLJgf4jyWWQZ",
+        "outputId": "5957982f-53f6-4c90-92bb-dc9ec453ad6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "165\n",
+            "1800\n",
+            "1965\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#list comprehension\n",
+        "a=[i for i in range(5)]\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "HvhKqDJdcOv3",
+        "outputId": "bb9a2ebb-a2c4-4855-ea68-1d3a65bb663f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 3, 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=16\n",
+        "t=n**0.25+81**0.25+256**0.25+625**0.25\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "id": "hAj3eToPYRdQ",
+        "outputId": "d210f9d5-230d-4517-8444-65c0b3df9322",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14.0\n"
+          ]
         }
       ]
     }
