--- a/vaishnavi.ipynb
+++ b/vaishnavi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOViPRKHr1TzOH988iaV2s9",
+      "authorship_tag": "ABX9TyPEnSYpBdijMl3tIFXJ94fb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -860,11 +860,11 @@
         "print(sum)"
       ],
       "metadata": {
-        "id": "bRdjP4L-VfTT",
-        "outputId": "6c155218-2c57-42aa-f596-ba33ee078fb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bRdjP4L-VfTT",
+        "outputId": "6c155218-2c57-42aa-f596-ba33ee078fb8"
       },
       "execution_count": 5,
       "outputs": [
@@ -892,11 +892,11 @@
         "print(sum3)"
       ],
       "metadata": {
-        "id": "oLJgf4jyWWQZ",
-        "outputId": "5957982f-53f6-4c90-92bb-dc9ec453ad6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oLJgf4jyWWQZ",
+        "outputId": "5957982f-53f6-4c90-92bb-dc9ec453ad6e"
       },
       "execution_count": 15,
       "outputs": [
@@ -919,11 +919,11 @@
         "print(a)"
       ],
       "metadata": {
-        "id": "HvhKqDJdcOv3",
-        "outputId": "bb9a2ebb-a2c4-4855-ea68-1d3a65bb663f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HvhKqDJdcOv3",
+        "outputId": "bb9a2ebb-a2c4-4855-ea68-1d3a65bb663f"
       },
       "execution_count": 20,
       "outputs": [
@@ -939,16 +939,40 @@
     {
       "cell_type": "code",
       "source": [
+        "value=[i*i for i in range (5)]\n",
+        "print(value)"
+      ],
+      "metadata": {
+        "id": "FsU8Uv2-c6Kf",
+        "outputId": "41d4fc1c-f38d-4387-b06c-364a82f62e70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 4, 9, 16]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "n=16\n",
         "t=n**0.25+81**0.25+256**0.25+625**0.25\n",
         "print(t)"
       ],
       "metadata": {
-        "id": "hAj3eToPYRdQ",
-        "outputId": "d210f9d5-230d-4517-8444-65c0b3df9322",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hAj3eToPYRdQ",
+        "outputId": "d210f9d5-230d-4517-8444-65c0b3df9322"
       },
       "execution_count": 17,
       "outputs": [
